# swapper

./: .env.example  .gitignore  AGENTS.md  DEPLOY_PYTHONANYWHERE.md  README.md  README_FOR_NEXT_SESSION.md  advanced_optimizer.py  app.py  backend.py  backtest.db  backtest_app.py  champion_strategy.py  champion_ultimate.py  clean_backtester.py  compare_strategies.py  correct_backtester.py  dashboard.py  final_finder.py  final_optimizer.py  hyper_strategy.py  live_matrix.db  live_matrix_app.py  main.py  matrix.db  matrix_app.py  portfolio_state.json  proper_backtester.py  pyproject.toml  real_time_strategy.py  realtime_server.py  realtime_trader_mexc.py  requirements.txt  results_threshold_1.json  robust_strategy.py  simple_app.py  simple_backtester.py  simple_matrix.db  strategy_finder.py  strategy_optimizer.py  ultimate_strategy.py  (+5 more)
.agents_tmp/: PLAN.md
ai/: __init__.py  llm_engine.py  pattern_analyzer.py  strategy_evolver.py
config/: __init__.py  settings.py
core/: __init__.py  engine.py  market_matrix.py  models.py  portfolio.py  records.py  simulator.py
data/: __init__.py  cache.py  loader.py
evolution/: __init__.py  dashboard.py  loop.py
frontend/: index.html  package-lock.json  package.json
matrix_swap/: DOCUMENTATION.md  SESSION_STATE.md  advanced_results.json  alerts.py  api.py  app.py  backtest.py  backtest_results.json  btc_okx.csv  config.py  fetch_history.py  fine_tune_results.json  matrix.py  mexc_1y_15m.csv  mexc_2y_15m.csv  mexc_30d_15m.csv  test_mexc.csv  threshold_optimization.json  tick_log.json  tick_log_now.json  tick_log_v2.json
(+62 files in other folders)
