[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swapper"
version = "0.1.0"
description = "Crypto swapper backtesting engine"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "core*", "data*", "indicators*", "optimizer*", "reports*", "scoring*", "strategies*"]
